5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1594_1803.log
== TEST (2019-04-11 22:58:35) 
-- CODE:
a=int(input("Digite um numero: "))
print(a)
-- OUTPUT:
2000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 23:01:48) 
-- CODE:
a=int(input("Digite um numero: "))
50%11=6
print(a)
-- ERROR:
File "XXXX", line 2
    50%11=6
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 23:03:37) 
-- CODE:
a=int(input("Digite um numero: "))
1%5%3%8//6
print(a)
-- OUTPUT:
2000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 23:04:19) 
-- CODE:
a=int(input("Digite um numero: "))
b=1%5%3%8//6
print(a)
print(b)
-- OUTPUT:
2000
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 17:05:51) 
-- CODE:
d=int(input("Digite um numero: ")
a=d // 1000	
b=(d // 100) % 10
c=(d // 10) % 10
d=d % 10
soma=a + b + c + d		

print(soma)
-- ERROR:
File "XXXX", line 2
    a=d // 1000	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 17:07:53) 
-- CODE:
d=int(input("Digite um numero: ")
a=d // 1000	
b=(d // 100) % 50
c=(d // 10) % 50
d=d % 50
soma=a + b + c + d		

print(soma)
-- ERROR:
File "XXXX", line 2
    a=d // 1000	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 17:08:29) 
-- CODE:
d=int(input("Digite um numero: ")
a=d // 1000	
b=(d // 100) % 11
c=(d // 10) % 11
d=d % 11
soma=a + b + c + d		

print(soma)
-- ERROR:
File "XXXX", line 2
    a=d // 1000	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 18:04:35) 
-- CODE:
d=int(input("Digite um numero: ")
a=d // 1000	
b=(d // 100) % 11
c=(d // 10) % 11
d=d % 11
soma=a*2 + b*3 + c*4 + d*5	// 11	

print(soma)
-- ERROR:
File "XXXX", line 2
    a=d // 1000	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 18:04:53) 
-- CODE:
d=int(input("Digite um numero: ")
a=(d // 1000)	
b=(d // 100) % 11
c=(d // 10) % 11
d=d % 11
soma=a*2 + b*3 + c*4 + d*5	// 11	

print(soma)
-- ERROR:
File "XXXX", line 2
    a=(d // 1000)	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:55:09) 
-- CODE:
d=int(input("Digite um numero: ")
a=(d // 1000)	
b=(d // 100) % 11
c=(d // 10) % 11
d=10 % 11
soma=a*2 + b*3 + c*4 + d*5	// 11	

print(soma)
-- ERROR:
File "XXXX", line 2
    a=(d // 1000)	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:23:20) 
-- CODE:
d=int(input("Digite um numero: ")
a=(d // 1000)	
b=(d // 100) % 11
c=(d // 10) % 11
d=10 % 11
soma=a + b + c + d	// 11	

print(soma)
-- ERROR:
File "XXXX", line 2
    a=(d // 1000)	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:46:42) 
-- CODE:
d=int(input("Digite um numero: ")
a=(d // 1000)	
b=(d // 100) % 10
c=(d // 10) % 10
d=10 % 10
soma=a + b + c + d	// 11	

print(soma)
-- ERROR:
File "XXXX", line 2
    a=(d // 1000)	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:47:14) 
-- CODE:
d=int(input("Digite um numero: ")
a=(d // 1000)	
b=(d // 100) % 10
c=(d // 10) % 10
d=10 % 10
soma=a + b + c + d	

print(soma)
-- ERROR:
File "XXXX", line 2
    a=(d // 1000)	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 22:18:59) 
-- CODE:
d=int(input("Digite um numero: ")
a=(d // 10000)	
b=(d // 1000) % 10
c=(d // 100) % 10
d=(d // 10) % 10
e=10 % 10		
soma=a + b + c + d + e

print(soma)
-- ERROR:
File "XXXX", line 2
    a=(d // 10000)	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 23:04:34) 
-- CODE:
n=int(input("Digite um numero: ")
a=(n // 1000)	
b=(n // 100) % 10
c=(n // 10) % 10
d=	10% 10		
soma=(a*5 + b*4 + c*3 + d*2 )%11

print(soma)
-- ERROR:
File "XXXX", line 2
    a=(n // 1000)	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 23:06:18) 
-- CODE:
n=int(input("Digite um numero: ")
d=(n // 1000)	
c=(n // 100) % 10
b=(n // 10) % 10
a=	10% 10		
soma=(a*5 + b*4 + c*3 + d*2 )%11

print(soma)
-- ERROR:
File "XXXX", line 2
    d=(n // 1000)	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 23:07:49) 
-- CODE:
n=int(input("Digite um numero: ")
a=(n // 100)	
b=(n // 100) % 10
c=(n // 10) % 10
d=	10% 10		
soma=(a*5 + b*4 + c*3 + d*2 )%11

print(soma)
-- ERROR:
File "XXXX", line 2
    a=(n // 100)	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 23:11:43) 
-- CODE:
n=int(input("Digite um numero: ")
		
soma=((a*5 )+ (b*4) + (c*3) + (d*2 ) % 11)

print(soma)
-- ERROR:
File "XXXX", line 3
    soma=((a*5 )+ (b*4) + (c*3) + (d*2 ) % 11)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 23:16:31) 
-- CODE:
n=int(input("Digite um numero: ")
a=n//1000
b=(n//1000)%100
c=(n//100)%10
d=(n//10)%10
e=n
soma=((a*5 )+ (b*4) + (c*3) + (d*2 ) % 11)

print(soma)
-- ERROR:
File "XXXX", line 2
    a=n//1000
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 23:19:04) 
-- CODE:
n=int(input("Digite um numero: ")
a=n//1000
n%1000		
b=n//100
n%100		
c=n//%10
n%10		
d=n
soma=((a*5 )+ (b*4) + (c*3) + (d*2 ) % 11)

print(soma)
-- ERROR:
File "XXXX", line 2
    a=n//1000
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 23:24:32) 
-- CODE:
n=int(input("Digite um numero: ")
a=(n//1000)
b=(n//1000)%100
c=(n//100)%10
d=(n//10)%10
e=10%10		
soma=((a*5 )+ (b*4) + (c*3) + (d*2 ) % 11)

print(soma)
-- ERROR:
File "XXXX", line 2
    a=(n//1000)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 15:59:18) 
-- CODE:
n=int(input("Digite um numero: ")
a=(n//1000)
b=(n//1000)%100
c=(n//100)%10
d=(n//10)%10
e=n%10		
soma=((a*5 )+ (b*4) + (c*3) + (d*2 ) % 11)

print(soma)
-- ERROR:
File "XXXX", line 2
    a=(n//1000)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:01:35) 
-- CODE:
n=int(input("Digite um numero: ")
a=(n//1000)
b=(n//100)%10
c=(n//100)%10
d=(n//10)%10
e=n%10		
soma=((a*5 )+ (b*4) + (c*3) + (d*2 ) % 11)

print(soma)
-- ERROR:
File "XXXX", line 2
    a=(n//1000)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:01:48) 
-- CODE:
n=int(input("Digite um numero: ")
a=n//1000
b=(n//100)%10
c=(n//100)%10
d=(n//10)%10
e=n%10		
soma=((a*5 )+ (b*4) + (c*3) + (d*2 ) % 11)

print(soma)
-- ERROR:
File "XXXX", line 2
    a=n//1000
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:02:50) 
-- CODE:
n=int(input("Digite um numero: ")
a=n//1000
b=(n//100)%10
c=(n//10)%10
d=n%10		
soma=((a*5 )+ (b*4) + (c*3) + (d*2 ) % 11)

print(abs(soma)0
-- ERROR:
File "XXXX", line 2
    a=n//1000
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:03:01) 
-- CODE:
n=int(input("Digite um numero: ")
a=n//1000
b=(n//100)%10
c=(n//10)%10
d=n%10		
soma=((a*5 )+ (b*4) + (c*3) + (d*2 ) % 11)

print(abs(soma)
-- ERROR:
File "XXXX", line 2
    a=n//1000
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:03:44) 
-- CODE:
n=int(input("Digite um numero: "))
a= n//1000
b=(n//100)%10
c=(n//10)%10
d=n%10		
soma=((a*5 )+ (b*4) + (c*3) + (d*2 ) % 11)

print(abs(soma)
-- ERROR:
File "XXXX", line 9
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:03:56) 
-- CODE:
n=int(input("Digite um numero: "))
a= n//1000
b=(n//100)%10
c=(n//10)%10
d=n%10		
soma=((a*5 )+ (b*4) + (c*3) + (d*2 ) % 11)

print(abs(soma))
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:05:02) 
-- CODE:
n=int(input("Digite um numero: "))
a= n//1000
b=(n//100)%10
c=(n//10)%10
d=n%10		
soma=(((a*5 )+ (b*4) + (c*3) + (d*2 ) % 11)

print(abs(soma))
-- ERROR:
File "XXXX", line 8
    print(abs(soma))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:05:21) 
-- CODE:
n=int(input("Digite um numero: "))
a= n//1000
b=(n//100)%10
c=(n//10)%10
d=n%10		
soma=(((a*5 )+ (b*4) + (c*3) + (d*2 )) % 11)

print(abs(soma))
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:05:34) 
-- CODE:
n=int(input("Digite um numero: "))
a= n//1000
b=(n//100)%10
c=(n//10)%10
d=n%10		
soma=(((a*5 )+ (b*4) + (c*3) + (d*2 )) % 11)

print(abs(soma))
-- EXECUTION TIME:
0.139382
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
